# production-ai

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  plan.txt  pyproject.toml
backend/: __init__.py  config.py  main.py
backend/agents/: __init__.py  graph.py  nodes.py  tools.py
backend/data/: __init__.py
backend/llm/: __init__.py  models.py  provider.py
backend/mcp/: __init__.py  handlers.py  server.py
backend/observability/: __init__.py  tracing.py
backend/rag/: __init__.py  indexer.py  retriever.py  vectorstore.py
data/documents/: .gitkeep
docs/: architecture.md  implementation.md  mcp.md  user_guide.md
frontend/: .dockerignore  Dockerfile
frontend/src/app/: globals.css  layout.tsx  page.tsx
frontend/src/app/chat/: page.tsx
frontend/src/app/documents/: page.tsx
frontend/src/app/settings/: page.tsx
frontend/src/components/: sidebar.tsx
frontend/src/lib/: api.ts
scripts/: test_phase4.py  test_phase5.py  test_phase7.py
