[project]
name = "production-ai"
version = "0.1.0"
description = "Production-grade AI system with local LLMs, RAG, and agent orchestration."
requires-python = ">=3.11"
dependencies = [
    # Web framework
    "fastapi>=0.115",
    "uvicorn[standard]>=0.34",
    "python-multipart>=0.0.20",
    # Config
    "python-dotenv>=1.1",
    "pydantic>=2.11",
    "pydantic-settings>=2.9",
    # HTTP client
    "httpx>=0.28",
    # LLM - Ollama
    "ollama>=0.5",
    # RAG - LlamaIndex
    "llama-index>=0.12",
    "llama-index-vector-stores-chroma>=0.4",
    "llama-index-llms-ollama>=0.5",
    "llama-index-embeddings-ollama>=0.5",
    "chromadb>=1.0",
    # Orchestration - LangGraph
    "langchain>=0.3",
    "langgraph>=0.4",
    "langchain-core>=0.3",
    "langchain-ollama>=0.3",
    # MCP
    "mcp>=1.9",
    # Data
    "duckdb>=1.2",
    # Observability
    "langfuse>=2.60",
]

[project.optional-dependencies]
dev = [
    "ruff>=0.11",
    "pytest>=8.3",
    "pytest-asyncio>=0.25",
]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "W"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
